--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,12 @@
       "browser": true,
       "es2021": true
    },
-   "extends": [
-      "eslint:recommended",
-      "plugin:vue/vue3-essential"
-   ],
+   "extends": ["eslint:recommended", "plugin:vue/vue3-essential"],
    "overrides": [],
    "parserOptions": {
       "ecmaVersion": "latest",
       "sourceType": "module"
    },
-   "plugins": [
-      "vue"
-   ],
+   "plugins": ["vue"],
    "rules": {}
 }
