ci: 修复更换分支系统后无法开始CI的问题
项目的原 GitHub Workflow 触发条件为检测 wu_main 分支上是否有 push，
更换分支系统（将分支名称 “_” 改为 “/” ）后也要讲 Workflow 配置文件中对
应的分支名改为 wu/main。

Signed-off-by: crrashh1542 <kotsuki@crrashh.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 on:
    push:
       # 由于其它分支为本地测试打包，故只 CI 主线变更
-      branches: [wu_main]
+      branches: [wu/main]
       paths-ignore:
          - '**.md'
          - '**.txt'
