--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "prettier": "^3.3.3",
       "tailwindcss": "^3.4.7",
       "vite": "^5.3.5",
+      "vite-plugin-pwa": "^0.20.1",
       "vue": "^3.4.35",
       "vue-clipboard3": "^2.0.0",
       "vue-router": "^4.4.2"
