--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@fluentui/web-components": "^2.6.1",
+        "@iconify/vue": "^4.1.2",
         "@vitejs/plugin-vue": "^5.1.2",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.5",
