--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@iconify/vue": "^4.1.2",
+        "@types/node": "^22.10.1",
         "@vitejs/plugin-vue": "^5.1.4",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.7",
