--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@iconify/vue": "^4.1.2",
+        "@studio384/amicons": "1.0.0-alpha.8",
         "@types/node": "^22.10.1",
         "@vitejs/plugin-vue": "^5.1.4",
         "autoprefixer": "^10.4.20",
