--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "p:write": "prettier . --write"
     },
     "devDependencies": {
+        "vue": "^3.5.13"
+    },
+    "dependencies": {
         "@iconify/vue": "^4.1.2",
         "@studio384/amicons": "1.0.0-alpha.8",
         "@types/node": "^22.10.1",
@@ -37,7 +40,6 @@
         "prettier": "^3.3.3",
         "vite": "^5.4.8",
         "vite-plugin-pwa": "^0.20.5",
-        "vue": "^3.5.10",
         "vue-clipboard3": "^2.0.0",
         "vue-router": "^4.4.5"
     },
